Fix on smaller devices

--- a/src/main/resources/static/styles/fragments.css
+++ b/src/main/resources/static/styles/fragments.css
@@ -177,6 +177,12 @@
     position: absolute;
 }
 
+@media only screen and (max-width: 400px) {
+    .searchbarIconContainerMobile {
+        padding: 18px 10px;
+    }
+}
+
 .searchbarButtonContainer {
     display: flex;
     flex-direction: row;
